[package]
name = "paksmith-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for parsing and extracting Unreal Engine game assets"

[dependencies]
thiserror.workspace = true
serde.workspace = true
# Phase 3a Task 3 promoted serde_json from dev-deps to a runtime
# dependency: `crate::export::GenericHandler` emits parsed property
# trees as pretty-printed JSON. Phase 3d-3h's typed handlers (CSV,
# glTF, etc.) will follow the same pattern.
serde_json.workspace = true
# Phase 3d Task 4: `crate::export::DataTableCsvHandler` writes RFC 4180
# CSV from DataTable rows.
csv.workspace = true
byteorder.workspace = true
tracing.workspace = true
flate2.workspace = true
sha1.workspace = true
zstd.workspace = true
brotli.workspace = true
# Phase 3e-5: BC1-BC7 block decoders consumed by
# `asset::exports::texture::pixel_format` for Texture2D pixel decoding.
bcdec_rs.workspace = true
# Phase 3e-6: ASTC + ETC1/ETC2 mobile block decoders, same consumer.
texture2ddecoder.workspace = true
# Phase 3e-8: PNG encoding for `crate::export::PngHandler` (Texture2D export).
png.workspace = true
# Phase 3f: Vorbis decode for `crate::export::OggHandler` (USoundWave "OGG"
# → 16-bit PCM WAV). Ogg+Vorbis features only (see workspace Cargo.toml).
symphonia.workspace = true
# Phase 3g: f16 → f32 decode for `FStaticMeshVertexBuffer`'s `FMeshUVHalf` UVs.
half.workspace = true
# Phase 3g2: glTF 2.0 (.glb) write API for `crate::export::static_mesh`
# (UStaticMesh → .glb). Write-only feature set (see workspace Cargo.toml).
gltf.workspace = true
# Phase 3h PR6: f64 matrix math for skeletal glTF bind-matrices (export only).
glam.workspace = true
# Phase 5a: AES-256-ECB decryption of encrypted UE paks (the same RustCrypto
# crate repak uses). ECB is done by manual 16-byte block iteration — no ecb/cbc dep.
aes.workspace = true
# Phase 5a: zero AES key material on drop (crypto-material hygiene).
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
# `serde_json` is no longer listed here — it was promoted to a
# runtime [dependencies] entry in Phase 3a Task 3 (GenericHandler
# emits JSON), and runtime deps are automatically available to
# `cfg(test)` builds. A duplicate `[dev-dependencies]` entry would
# be redundant noise.
# F4 (security hardening) tests stage a real fixture inside a temp
# directory and symlink to it; an ephemeral working dir keeps the
# host filesystem clean across test runs.
tempfile.workspace = true
# Issue #111: capture-and-assert `tracing::warn!`/`error!` events for
# operator-facing telemetry that monitoring tools grep for. The
# `#[traced_test]` macro installs a per-test capture subscriber so
# `logs_contain("token")` works without exposing a `cfg(test)`
# accessor on production types (which would be API-leakage) and
# without hand-rolling a `Subscriber` impl (which is non-trivial
# due to the trait's many methods).
tracing-test = "0.2"

[features]
# Test-only accessors gated behind this feature so they're not part
# of the stable public API. Activated by the sibling
# `paksmith-core-tests` crate (which owns the integration tests that
# need these accessors) and by `paksmith-fixture-gen`. Downstream
# consumers should NOT enable it.
#
# Previously activated via a dev-dep self-import in this Cargo.toml;
# that created a `paksmith-core -> paksmith-core` edge in the
# release-please cargo-workspace plugin's dep graph, breaking the
# release workflow. The dedicated test crate avoids the self-edge.
#
# **Feature-unification caveat:** Cargo features are resolved
# globally per package across the workspace dep graph. If a future
# workspace member adds `paksmith-core` as a NON-DEV dep AND
# something else activates `__test_utils` transitively, the gated
# symbols would land in the non-test build. The leading `__` is
# convention only; cargo doesn't enforce it. Reviewers adding new
# paksmith-core consumers should verify they don't accidentally
# unify this feature open.
__test_utils = []

# Cross-parser fixture generation (uses the trumank/repak git dep) and
# the Layer 1+2 cross-validation tests live in the sibling
# `paksmith-fixture-gen` crate, which is excluded from workspace
# default-members. This keeps the main library build free of any git-
# sourced dependency. See workspace Cargo.toml + #20 for rationale.

[[example]]
name = "generate_fixtures"
path = "../../tests/fixtures/generate.rs"
# Required so the example can `use paksmith_core::testing::wire::*`
# (gated internal surface). Cargo enforces at run time.
required-features = ["__test_utils"]

[[example]]
name = "emit_gltf_validation_fixtures"
# Emits the cube + skinned `.glb` for the gltf-validation CI job (#564);
# uses the `__test_utils`-gated `testing::gltf_fixtures` builders.
required-features = ["__test_utils"]

[lints]
workspace = true
