[package]
name = "paksmith-fixture-gen"
# Not released — internal dev tool, not part of release-please's
# tracked packages. Pinned to 0.0.0 to make this obvious; the root
# `workspace.package.version` would have left it inheriting the
# user-facing version, which is misleading for a non-user-facing crate.
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Internal dev tool: regenerates the cross-parser ground-truth pak fixtures used by paksmith-core's tests"
publish = false

# This crate is intentionally NOT in the workspace's `default-members` (see
# the workspace `Cargo.toml`). Default `cargo build` / `cargo test` runs from
# the repo root skip it entirely so that routine development never has to
# resolve the `repak` git dependency. CI uses `cargo test --workspace` to
# include it; fixture regeneration is `cargo run -p paksmith-fixture-gen`.

[dependencies]
# Third-party UE pak reader/writer (trumank/repak). Used as an independent
# implementation for cross-parser ground-truth fixtures (#14) and the
# Layer 2 cross-validation tests. License: MIT/Apache.
#
# Pinned to a SHA on git rather than crates.io because the `repak` name on
# crates.io is squatted by an unrelated abandoned crate; trumank's actual
# UE pak library only ships via GitHub. The `version = "0.2"` field is a
# constraint cross-checked against the git checkout's actual version (and
# satisfies cargo-deny's `wildcards = "deny"` ban on git deps without a
# version requirement).
# Issue #69: enable the `compression` feature so repak's writer can
# emit zlib-compressed entries. Without this, every fixture is
# uncompressed and the layer-3 oracle's `is_compressed` check
# reduces to `false == false` against the entire corpus, never
# exercising the regression class issue #69 targets. The feature
# pulls in flate2/zstd/lz4_flex (already transitively in the
# workspace via paksmith-core's flate2 dep).
repak = { version = "0.2", git = "https://github.com/trumank/repak", rev = "e215472c51db", default-features = false, features = ["compression"] }

# Cross-parser oracle for uasset cross-validation (Task 12). Mirrors the
# trumank/repak pattern in this crate. Pinned to a SHA (verified to
# expose Asset::new + asset.imports + asset.asset_data.exports at
# write time of this plan). The crate IS on crates.io as 0.1.16 from
# this same monorepo, but the workspace structure means the
# unreal_asset_base / unreal_asset_exports / unreal_asset_properties
# sister crates need to come from the same revision — pinning git
# avoids the version-skew risk crates.io's per-crate publication
# allows. The `version = "0.1"` clause matches the workspace version
# at the pinned SHA (0.1.16) and satisfies cargo-deny's
# `wildcards = "deny"` ban on git deps without a version requirement.
unreal_asset = { version = "0.1", git = "https://github.com/AstroTechies/unrealmodding", rev = "f4df5d8e75b1e184832384d1865f0b696b90a614" }

# Move paksmith-core OUT of [dev-dependencies] and INTO [dependencies]
# (the same entry, just relocated) so the new src/uasset.rs module can
# import the builder from paksmith-core::testing::uasset. Enable the
# __test_utils feature on this side.
#
# THIS IS THE FIRST NON-DEV EDGE INTO paksmith-core THAT ACTIVATES
# __test_utils. Until now, the feature was activated only by
# paksmith-core's own dev-dep self-import — which gets pruned out of
# release builds. After this change, `cargo build --workspace
# --release` compiles paksmith-core::testing::{uasset,v10,oom} into
# every paksmith-core dependent's rlib (cli, gui, fixture-gen).
# Linker DCE strips the unused symbols from the final binaries; the
# `__` naming convention remains the soft guarantee against
# downstream import. See Task 10b's "Feature-unification caveat" for
# the full trade-off discussion and the fallback alternative.
paksmith-core = { path = "../paksmith-core", version = "0.1", features = ["__test_utils"] }

# Error propagation for cross-parser asserts. Fixture-gen is dev-only,
# so anyhow::ensure! suffices over typed PaksmithError variants.
# Floor at 1.0.4 — earliest version where `ensure!` is reachable as
# `anyhow::ensure!`. 1.0.0 lacks the macro entirely; CI's `Minimal
# versions` job picks the lowest compatible version and fails on it.
anyhow = "1.0.4"

[dev-dependencies]
# Independent FPakEntry metadata oracle (issue #69) reads varints
# from the wire format directly, bypassing paksmith-core's parser.
byteorder.workspace = true

[lints]
workspace = true
