[package]
name = "paksmith-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GUI for exploring and extracting Unreal Engine game assets"

[dependencies]
dark-light = "2.0.0"
# Phase 6: Iced GUI framework. MIT/Apache-2.0.
iced = "0.14"
# Phase 6: core library for container I/O and asset parsing.
paksmith-core = { path = "../paksmith-core", version = "0.1" }

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSColor", "NSColorSpace"] }
