[package]
name = "paksmith-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GUI for exploring and extracting Unreal Engine game assets"

[dependencies]
dark-light = "2.0.0"
# Phase 6: Iced GUI framework. MIT/Apache-2.0. The `tokio` feature makes Iced's
# `Task::perform` executor tokio-backed, which `paksmith-core`'s reqwest-based
# registry fetch (inside the async `resolve_pak_key`) requires at runtime — the
# default `thread-pool` executor would panic with no tokio reactor.
iced = { version = "0.14", features = ["tokio"] }
# Phase 6: core library for container I/O and asset parsing.
paksmith-core = { path = "../paksmith-core", version = "0.1" }
# Phase 6 Task 7: native file picker (open dialog) for macOS/Windows/Linux.
# MIT/Apache-2.0.
rfd = "0.15"
# Phase 6 Task 7: thiserror for OpenError.
thiserror.workspace = true

[dev-dependencies]
# Phase 6 Task 7: async runtime for the open-fixture integration test.
tokio = { workspace = true }

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = ["NSColor", "NSColorSpace"] }
