[package]
name = "paksmith-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GUI for exploring and extracting Unreal Engine game assets"

[dependencies]
dark-light = "2.0.0"
# Phase 6: Iced GUI framework. MIT/Apache-2.0. The `tokio` feature makes Iced's
# `Task::perform` executor tokio-backed, which `paksmith-core`'s reqwest-based
# registry fetch (inside the async `resolve_pak_key`) requires at runtime — the
# default `thread-pool` executor would panic with no tokio reactor.
iced = { version = "0.14", features = ["tokio", "image-without-codecs", "canvas"] }
# Phase 6 Task 11: native menu bar (File/View/Help) with ⌘/Ctrl-O accelerator.
# Apache-2.0 OR MIT.  macOS: global app menu via init_for_nsapp().
# Windows/Linux: menu built but not attached (no iced 0.14 window-handle API).
muda = "0.19.3"
# Phase 6: core library for container I/O and asset parsing.
paksmith-core = { path = "../paksmith-core", version = "0.1" }
# Phase 7d: audio-output backend for the audio player. `default-features = false`
# drops rodio's decoder stack — paksmith-core decodes to i16 PCM, rodio only
# plays raw samples via SamplesBuffer. See workspace Cargo.toml for the feature
# rationale.
rodio.workspace = true
# Phase 6 Task 7: native file picker (open dialog) for macOS/Windows/Linux.
# MIT/Apache-2.0.
rfd = "0.17"
# Phase 6 Task 7: thiserror for OpenError.
thiserror.workspace = true
# Phase 6 Task 11: structured logging for menu build failure (non-fatal, continues
# without native menu). Matches the workspace convention for all crates.
tracing.workspace = true
tracing-subscriber.workspace = true

# Phase 6 Task 11: async sleep in the menu subscription bridge (tokio runtime
# is already present via iced's tokio feature; `time` declared here because
# menu.rs calls tokio::time::sleep — the feature must be direct, not just
# a transitive unification via iced).
tokio = { workspace = true, features = ["time"] }
mutants = "0.0.4"
# Phase 6 final-panel: zeroize the hex-key buffer so AES key material is
# cleared on drop.  zeroize is a workspace dep (pulled in by paksmith-core).
zeroize = { workspace = true }

[dev-dependencies]
# Phase 6 Task 7: async runtime for the open-fixture integration test.
tokio = { workspace = true }
# Phase 7b Task 3: enable __test_utils so tests can build synthetic texture
# Packages via paksmith_core::testing::uasset. Normal `cargo build` is
# unaffected; this feature is only active during test compilation.
paksmith-core = { path = "../paksmith-core", version = "0.1", features = ["__test_utils"] }

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSColorSpace"] }
